[NO-JIRA] Remove reported generic code smell